[project]
name = "seally"
version = "0.1.0"
description = "A simple planning library for prototyping "
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "networkx[default]>=3.4",
    "numpy>=2.0",
    "pandas>=3.0",
    "pygame>=2.6",
]
keywords = ["Motion Planning", "AI", "Robotics"]
authors = [
    { name = "Nicholas Sutton", email = "nicksutton46@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nick-Sutton/Seally"
Documentation = "https://nick-Sutton.github.io/Seally/"
Repository = "https://github.com/nick-Sutton/Seally"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seally"] 

[dependency-groups]
dev = [
    "mkdocs>=1.0,<2.0",
    "mkdocs-material>=9.7.6",
]
